complete report in init sdk